<resources>
    <string name="app_name">calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="nine">8</string>
    <string name="x">X</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="del">DEL</string>
    <string name="equal">=</string>

</resources>
