<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/result"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="right|center_vertical"
        android:layout_margin="@dimen/common_margin"
        android:padding="2dp"
        android:textSize="14sp"
        android:background="@drawable/boarder"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <demo.com.calculator.view.OperandView
                    android:id="@+id/one"
                    style="@style/OperandView"
                    android:text="@string/one"
                    />

                <demo.com.calculator.view.OperandView
                    android:id="@+id/two"
                    style="@style/OperandView"
                    android:text="@string/two"/>

                <demo.com.calculator.view.OperandView
                    android:id="@+id/three"
                    style="@style/OperandView"
                    android:text="@string/three"/>

                <demo.com.calculator.view.OperandView
                    android:id="@+id/multiple"
                    style="@style/OperandView"
                    android:text="@string/x"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <demo.com.calculator.view.OperandView
                    android:id="@+id/four"
                    style="@style/OperandView"
                    android:text="@string/four"
                    />

                <demo.com.calculator.view.OperandView
                    android:id="@+id/five"
                    style="@style/OperandView"
                    android:text="@string/five"
                    />

                <demo.com.calculator.view.OperandView
                    android:id="@+id/six"
                    style="@style/OperandView"
                    android:text="@string/six"
                    />

                <demo.com.calculator.view.OperandView
                    android:id="@+id/minus"
                    style="@style/OperandView"
                    android:text="@string/minus"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <demo.com.calculator.view.OperandView
                    android:id="@+id/del"
                    style="@style/OperandView"
                    android:text="@string/del"
                    />

                <demo.com.calculator.view.OperandView
                    android:id="@+id/zero"
                    style="@style/OperandView"
                    android:text="@string/zero"
                    />

                <demo.com.calculator.view.OperandView
                    android:id="@+id/equal"
                    style="@style/OperandView"
                    android:text="@string/equal"
                    />

                <demo.com.calculator.view.OperandView
                    android:id="@+id/add"
                    style="@style/OperandView"
                    android:text="@string/add"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
